--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "18.16.9",
     "nx": "21.1.0-beta.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2"
