--- a/nx.json
+++ b/nx.json
@@ -38,6 +38,12 @@
           "targetName": "typecheck"
         }
       }
+    },
+    {
+      "plugin": "@nx/playwright/plugin",
+      "options": {
+        "targetName": "e2e"
+      }
     }
   ]
 }
