--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/devkit": "21.1.0-beta.1",
     "@nx/js": "21.1.0-beta.1",
+    "@nx/playwright": "^21.1.0-beta.1",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -16,6 +18,7 @@
     "typescript": "~5.7.2"
   },
   "workspaces": [
-    "packages/*"
-  ]
+    "apps/*"
+  ],
+  "dependencies": {}
 }
